--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,3 +1,6 @@
 <%- include("templates/header") %> 
-    Page not found - 404
+<div class="alert alert-danger" role="alert">
+   404 page not found!!
+  </div>
+    
     <%- include("templates/footer") %> 
